aptosid-settings-desktop (20250119.1) UNRELEASED; urgency=medium

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Kel Modderman ]
  * waybar/hyprland: add style.css, hyprland/language config, tweak icon
    sizes and spacing.
  * common: install mako notification daemon theme.
  * hyprland: set path to make config.
  * hyprland: update keybindings.

 -- Kel Modderman <kelvmod@gmail.com>  Sun, 19 Jan 2025 11:57:14 +1000

aptosid-settings-desktop (20250117.1) unstable; urgency=medium

  * kde: add konversationrc for dark mode.
  * kde: add konsolerc to set default scrollback location to ~/.cache.

 -- Kel Modderman <kelvmod@gmail.com>  Fri, 17 Jan 2025 14:52:35 +1000

aptosid-settings-desktop (20250111.2) unstable; urgency=medium

  * Only adjust desktop icons in live mode.

 -- Kel Modderman <kelvmod@gmail.com>  Sat, 11 Jan 2025 14:00:17 +1000

aptosid-settings-desktop (20250111.1) unstable; urgency=medium

  * aptosid-settings-common: import add-aptosid-desktop-icon from
    calamares-settings-aptosid.
  * Add debian/aptosid-settings-labwc.lintian-overrides to silence
    warnings about a script which does not need to be executable.
  * Fold aptosid-icons into aptosid-settings-common.

 -- Kel Modderman <kelvmod@gmail.com>  Sat, 11 Jan 2025 13:59:33 +1000

aptosid-settings-desktop (20250102.8) unstable; urgency=medium

  [ Kel Modderman ]
  * aptosid-settings-sway: add vice colorscheme.
  * aptosid-settings-common: incporate gtklock.ini that was previously
    in aptosid-settings-labwc so it may apply to sway and hyprland too.
  * aptosid-settings-sway: configure defaults for touchpads and scope
    keyboard configuration to type:keyboard.
  * aptosid-settings-common: add default kitty configuration and color
    scheme.
  * aptosid-settings-hyprland: remove env var disabling Qt windows
    decorations.
  * aptosid-settings-sway: configure gaps.
  * aptosid-settings-hyprland: enhance waycar configuration.
