@@ -1,0 +1,39 @@
+@define-color foreground #eff0f1;
+@define-color foreground-inactive #7f8c8d;
+@define-color background #232629;
+@define-color background-alt #31363b;
+
+* {
+    font-family: Cantarell, Noto Sans, sans-serif;
+    font-size: 16px;
+    padding: 0;
+    margin: 0;
+}
+
+#waybar {
+    color: @foreground;
+    background-color: @background;
+}
+
+#workspaces button {
+    padding-left: 1em;
+    padding-right: 1.3em;
+}
+
+#workspaces button.empty {
+    color: @foreground-inactive;
+}
+
+#workspaces button.active {
+    background-color: @background-alt;
+    border-radius: 3px;
+}
+
+#power-profiles-daemon,
+#wireplumber,
+#battery,
+#language,
+#tray,
+#clock {
+    padding-right: 6px;
+}
