@@ -6,6 +6,7 @@ aptosid-settings-desktop (20250119.1) UNRELEASED; urgency=medium
   [ Kel Modderman ]
   * waybar/hyprland: add style.css, hyprland/language config, tweak icon
     sizes and spacing.
+  * waybar/sway: add style.css.
   * common: install mako notification daemon theme.
   * hyprland: set path to make config.
   * hyprland: update keybindings.
